--- a/Network Slice.ipynb
+++ b/Network Slice.ipynb
@@ -2111,7 +2111,7 @@
     "I can make the following observations based on the results from the thinned dataset. \n",
     "\n",
     "1. **Non-linearity** - NN, RBF SVM, decision trees, random forests, and AdaBoost are all capable of capturing non-linear relationships. When we removed features, this made the data non-linear. Naive Bayes, linear SVM, and neural networks often assume linear relationships between features and target variables. Poor performance of these algorithms suggests that your data may not adhere well to these linear assumptions.\n",
-    "2. **Ensemble Methods** - Random forests and AdaBoost are ensemble methods that combine multiple models to improve performance. Their success on your data suggests that there may be benefit in combining multiple weaker models to capture the underlying patterns in your dataset.\n",
+    "2. **Ensemble Methods** - Random forests and AdaBoost are ensemble methods that combine multiple models to improve performance. Their success on your data suggests that there may be benefit in combining multiple weaker models to capture the underlying patterns in your dataset.\n"
    ]
   }
  ],
